--- a/conf/application.conf
+++ b/conf/application.conf
@@ -14,6 +14,8 @@ play.i18n.langs=["en"]
 # Registers the request handler
 # ~~~~~
 play.http.requestHandler = "play.api.http.DefaultHttpRequestHandler"
+play.modules.disabled += "com.mohiva.play.silhouette.api.actions.SecuredErrorHandlerModule"
+
 
 # Registers the filters
 # ~~~~~
