--- a/conf/application.conf
+++ b/conf/application.conf
@@ -14,7 +14,8 @@ play.i18n.langs=["en"]
 # Registers the request handler
 # ~~~~~
 play.http.requestHandler = "play.api.http.DefaultHttpRequestHandler"
-play.modules.disabled += "com.mohiva.play.silhouette.api.actions.SecuredErrorHandlerModule"
+play.filters.enabled += play.filters.cors.CORSFilter
+
 
 
 # Registers the filters
@@ -73,6 +74,10 @@ play.filters.csp {
 
 play.filters {
   supportsCredentials = true
+}
+
+play.filters.cors {
+  allowedOrigins = ["http://localhost:8080"]
 }
 
 include "silhouette.conf"
