added google signin

--- a/conf/silhouette.conf
+++ b/conf/silhouette.conf
@@ -55,9 +55,9 @@ silhouette {
   google.authorizationURL="https://accounts.google.com/o/oauth2/auth"
   google.accessTokenURL="https://accounts.google.com/o/oauth2/token"
   google.redirectURL="http://localhost:9000/authenticate/google"
-  google.clientID=""
+  google.clientID="456507613062-8o95kesvmbc22okoj0sa2o52015bfq20.apps.googleusercontent.com"
   google.clientID=${?GOOGLE_CLIENT_ID}
-  google.clientSecret=""
+  google.clientSecret="VG55K5h5zWvVnzI3wwskRq3W"
   google.clientSecret=${?GOOGLE_CLIENT_SECRET}
   google.scope="profile email"
 
