fixed maybe or not

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -77,7 +77,10 @@ play.filters {
 }
 
 play.filters.cors {
-  allowedOrigins = ["http://localhost:8080"]
+  allowedOrigins = ["http://localhost:8080", ...]
+  allowedHttpMethods = ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
+  allowedHttpHeaders = ["Cookie", "Origin", "Accept", "X-Requested-With", "Content-Type", "Access-Control-Request-Method", "Access-Control-Request-Headers"]
+  supportsCredentials = true
 }
 
 include "silhouette.conf"
