--- a/conf/application.prod.conf
+++ b/conf/application.prod.conf
@@ -21,22 +21,22 @@ play.mailer {
 silhouette {
 
   # Authenticator settings
-  authenticator.cookieDomain="play-silhouette-seed.herokuapp.com"
+  authenticator.cookieDomain="wt-connect4.herokuapp.com"
   authenticator.secureCookie=true
 
   # OAuth1 token secret provider settings
-  oauth1TokenSecretProvider.cookieDomain="play-silhouette-seed.herokuapp.com"
+  oauth1TokenSecretProvider.cookieDomain="wt-connect4.herokuapp.com"
   oauth1TokenSecretProvider.secureCookie=true
 
   # OAuth2 state provider settings
-  oauth2StateProvider.cookieDomain="play-silhouette-seed.herokuapp.com"
+  oauth2StateProvider.cookieDomain="wt-connect4.herokuapp.com"
   oauth2StateProvider.secureCookie=true
 
   # Facebook provider
   facebook.redirectURL="https://play-silhouette-seed.herokuapp.com/authenticate/facebook"
 
   # Google provider
-  google.redirectURL="https://play-silhouette-seed.herokuapp.com/authenticate/google"
+  google.redirectURL="https://wt-connect4.herokuapp.com/authenticate/google"
 
   # VK provider
   vk.redirectURL="https://play-silhouette-seed.herokuapp.com/authenticate/vk"
