changed oauth header

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -76,12 +76,13 @@ play.filters {
   supportsCredentials = true
 }
 
-play.filters.cors {
+play.filters.cors  {
   allowedOrigins = ["http://localhost:8080", ...]
   allowedHttpMethods = ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
-  allowedHttpHeaders = ["Cookie", "Origin", "Accept", "X-Requested-With", "Content-Type", "Access-Control-Request-Method", "Access-Control-Request-Headers"]
+  allowedHttpHeaders = ["Cookie", "Origin", "Accept", "X-Requested-With", "Content-Type", "Access-Control-Request-Method", "Access-Control-Request-Headers", "Access-Control-Allow-Origin"]
   supportsCredentials = true
 }
+
 
 include "silhouette.conf"
 
