--- a/conf/application.prod.conf
+++ b/conf/application.prod.conf
@@ -54,5 +54,5 @@ silhouette {
 
 play.filters.hosts {
   # Allow requests to heroku, its subdomains, and localhost:9000.
-  allowed = [".herokuapp.com", "localhost:9000"]
+  allowed = [".herokuapp.com", "localhost:9000", "localhost:8080"]
 }
