--- a/conf/application.prod.conf
+++ b/conf/application.prod.conf
@@ -23,6 +23,7 @@ silhouette {
   # Authenticator settings
   authenticator.cookieDomain="wt-connect4.herokuapp.com"
   authenticator.secureCookie=true
+  authenticator.sameSite="None"
 
   # OAuth1 token secret provider settings
   oauth1TokenSecretProvider.cookieDomain="wt-connect4.herokuapp.com"
@@ -31,6 +32,7 @@ silhouette {
   # OAuth2 state provider settings
   oauth2StateProvider.cookieDomain="wt-connect4.herokuapp.com"
   oauth2StateProvider.secureCookie=true
+  oauth2StateProvider.sameSite = "None"
 
   # Facebook provider
   facebook.redirectURL="https://play-silhouette-seed.herokuapp.com/authenticate/facebook"
@@ -54,5 +56,5 @@ silhouette {
 
 play.filters.hosts {
   # Allow requests to heroku, its subdomains, and localhost:9000.
-  allowed = [".herokuapp.com", "localhost:9000", "localhost:8080"]
+  allowed = [".herokuapp.com", "localhost:9000", "localhost:8080", ".google.com"]
 }
