fixed google redirect

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -79,7 +79,7 @@ play.filters {
 play.filters.cors  {
   allowedOrigins = ["http://localhost:8080", ...]
   allowedHttpMethods = ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
-  allowedHttpHeaders = ["Cookie", "Origin", "Accept", "X-Requested-With", "Content-Type", "Access-Control-Request-Method", "Access-Control-Request-Headers", "Access-Control-Allow-Origin"]
+  allowedHttpHeaders =  [":scheme", ":authority", ":method", ":path", "Cookie", "Origin", "Accept", "X-Requested-With", "Content-Type", "Access-Control-Request-Method", "Access-Control-Request-Headers"]
   supportsCredentials = true
 }
 
