--- a/conf/silhouette.conf
+++ b/conf/silhouette.conf
@@ -54,7 +54,7 @@ silhouette {
   # Google provider
   google.authorizationURL="https://accounts.google.com/o/oauth2/auth"
   google.accessTokenURL="https://accounts.google.com/o/oauth2/token"
-  google.redirectURL="http://wt-connect4.herokuapp.com/authenticate/google"
+  google.redirectURL="localhost:9000/authenticate/google"
   google.clientID="456507613062-8o95kesvmbc22okoj0sa2o52015bfq20.apps.googleusercontent.com"
   google.clientID=${?GOOGLE_CLIENT_ID}
   google.clientSecret="VG55K5h5zWvVnzI3wwskRq3W"
