added frontend to backend

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -14,14 +14,15 @@ play.i18n.langs=["en"]
 # Registers the request handler
 # ~~~~~
 play.http.requestHandler = "play.api.http.DefaultHttpRequestHandler"
-play.filters.enabled += play.filters.cors.CORSFilter
+#play.filters.enabled += play.filters.cors.CORSFilter
 
 
 
 # Registers the filters
 # ~~~~~
-play.filters.enabled += "play.filters.csp.CSPFilter"
-play.filters.disabled+= play.filters.csrf.CSRFFilter
+#play.filters.enabled += "play.filters.csp.CSPFilter"
+play.filters.disabled += "play.filters.csp.CSPFilter"
+play.filters.disabled += "play.filters.csrf.CSRFFilter"
 
 # The application DI modules
 # ~~~~~
