--- a/conf/application.prod.conf
+++ b/conf/application.prod.conf
@@ -11,7 +11,7 @@ play.mailer {
   host = "smtp.sendgrid.net"
   port = 587
   tls = true
-  mock = false
+  mock = true
   user = ""
   user = ${?SENDGRID_USERNAME}
   password = ""
