fixed mail, maybe

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -78,9 +78,9 @@ play.filters {
 }
 
 play.filters.cors  {
-  allowedOrigins = ["http://localhost:8080", ...]
+  allowedOrigins = ["http://localhost:8080", ..., ".google.com"]
   allowedHttpMethods = ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
-  allowedHttpHeaders =  [":scheme", ":authority", ":method", ":path", "Cookie", "Origin", "Accept", "X-Requested-With", "Content-Type", "Access-Control-Request-Method", "Access-Control-Request-Headers"]
+  allowedHttpHeaders =  [":scheme", ":authority", ":method", ":path", "Cookie", "Origin", "Accept", "X-Requested-With", "Content-Type", "Access-Control-Request-Method", "Access-Control-Request-Headers", "Access-Control-Allow-Origin"]
   supportsCredentials = true
 }
 
