enabled cors again, for the 123876123871263 time

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -78,13 +78,12 @@ play.filters {
 }
 
 play.filters.cors  {
-  #allowedOrigins = ["http://localhost:8080", ..., ".google.com"]
+  allowedOrigins = ["http://localhost:8080", ..., ".google.com"]
   allowedHttpMethods = ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
   allowedHttpHeaders =  [":scheme", ":authority", ":method", ":path", "Cookie", "Origin", "Accept", "X-Requested-With", "Content-Type", "Access-Control-Request-Method", "Access-Control-Request-Headers", "Access-Control-Allow-Origin"]
   supportsCredentials = true
 }
 
-play.filters.cors.allowedOrigins = null
 
 
 include "silhouette.conf"
