more cors fixes

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -78,7 +78,7 @@ play.filters {
 }
 
 play.filters.cors  {
-  allowedOrigins = ["http://localhost:8080", ..., ".google.com"]
+  allowedOrigins = ["http://localhost:8080", ..., ".google.com", "https://wt-connect4.herokuapp.com/", "http://wt-connect4.herokuapp.com/". "https://wt-connect4.herokuapp.com/authenticate/google"]
   allowedHttpMethods = ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
   allowedHttpHeaders =  [":scheme", ":authority", ":method", ":path", "Cookie", "Origin", "Accept", "X-Requested-With", "Content-Type", "Access-Control-Request-Method", "Access-Control-Request-Headers", "Access-Control-Allow-Origin"]
   supportsCredentials = true
