cors enabled again

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -77,15 +77,15 @@ play.filters {
   supportsCredentials = true
 }
 
-play.filters.disabled += "play.filters.cors.CORSFilter"
-play.filters.disabled += play.filters.cors.CORSFilter
+#play.filters.disabled += "play.filters.cors.CORSFilter"
+#play.filters.disabled += play.filters.cors.CORSFilter
 
-#play.filters.cors  {
-#  allowedOrigins = ["http://localhost:8080", ..., ".google.com", "https://wt-connect4.herokuapp.com/", "http://wt-connect4.herokuapp.com/". "https://wt-connect4.herokuapp.com/authenticate/google"]
-#  allowedHttpMethods = ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
-#  allowedHttpHeaders =  [":scheme", ":authority", ":method", ":path", "Cookie", "Origin", "Accept", "X-Requested-With", "Content-Type", "Access-Control-Request-Method", "Access-Control-Request-Headers", "Access-Control-Allow-Origin"]
-#  supportsCredentials = true
-#}
+play.filters.cors  {
+  allowedOrigins = ["https://accounts.google.com/o/oauth2/auth/oauthchooseaccount", "http://localhost:8080", ..., ".google.com", "https://wt-connect4.herokuapp.com/", "http://wt-connect4.herokuapp.com/". "https://wt-connect4.herokuapp.com/authenticate/google", "https://wt-connect4.herokuapp.com/lobby"]
+  allowedHttpMethods = ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
+  allowedHttpHeaders =  [":scheme", ":authority", ":method", ":path", "Cookie", "Origin", "Accept", "X-Requested-With", "Content-Type", "Access-Control-Request-Method", "Access-Control-Request-Headers", "Access-Control-Allow-Origin"]
+  supportsCredentials = true
+}
 
 
 
